--- a/09. dom/ejercicio-final/index.html
+++ b/09. dom/ejercicio-final/index.html
@@ -36,6 +36,45 @@
       .nav-image-dimension{
         @apply w-28
       }
+
+      .main-dimension {
+        @apply mx-10 my-2
+      }
+
+      .grid-3 {
+        @apply grid grid-cols-3 gap-5 my-3
+      }
+      .col-1 {
+        @apply col-span-1
+      }
+      .col-2 {
+        @apply col-span-2
+      }
+
+      .input {
+        @apply w-full border border-gray-600 rounded-lg px-5 py-3 focus:shadow-lg
+      }
+      .btn-primary-full {
+        @apply w-full h-full rounded-lg bg-blue-500 text-white font-bold text-center hover:scale-105 transition duration-200
+      }
+      .btn-danger {
+        @apply rounded-md bg-red-500 mx-2 px-5 py-2 text-white font-bold text-center hover:scale-105 transition duration-200
+      }
+      .btn-secondary {
+        @apply rounded-md bg-gray-200 mx-2 px-5 py-2 text-black font-bold text-center hover:scale-105 transition duration-200
+      }
+      .card {
+        @apply w-full rounded-lg shadow-md border border-gray-300
+      }
+      .card-primary-header {
+        @apply w-full rounded-t-lg bg-blue-500 px-10 py-2 text-white font-bold text-lg
+      }
+      .card-body {
+        @apply w-full p-4
+      }
+      .card-footer {
+        @apply w-full rounded-b-lg px-5 py-2 bg-gray-100 flex flex-row justify-end items-center
+      }
     }
   </style>
 </head>
