--- a/09. dom/ejercicio-final/index.html
+++ b/09. dom/ejercicio-final/index.html
@@ -51,8 +51,11 @@
         @apply col-span-2
       }
 
-      .input {
+      .input-big {
         @apply w-full border border-gray-600 rounded-lg px-5 py-3 focus:shadow-lg
+      }
+      .input {
+        @apply w-full border border-gray-600 rounded-md px-3 py-1.5 focus:shadow-lg
       }
       .btn-primary-full {
         @apply w-full h-full rounded-lg bg-blue-500 text-white font-bold text-center hover:scale-105 transition duration-200
@@ -74,6 +77,9 @@
       }
       .card-footer {
         @apply w-full rounded-b-lg px-5 py-2 bg-gray-100 flex flex-row justify-end items-center
+      }
+      .span-card {
+        @apply ml-2 mr-4 capitalize
       }
     }
   </style>
