--- a/09. dom/ejercicio-final/index.html
+++ b/09. dom/ejercicio-final/index.html
@@ -50,6 +50,9 @@
       .col-2 {
         @apply col-span-2
       }
+      .col-3 {
+        @apply col-span-3
+      }
 
       .input-big {
         @apply w-full border border-gray-600 rounded-lg px-5 py-3 focus:shadow-lg
@@ -80,6 +83,22 @@
       }
       .span-card {
         @apply ml-2 mr-4 capitalize
+      }
+
+      .table {
+        @apply w-full
+      }
+      .table-header {
+        @apply bg-gray-400 text-white
+      }
+      .table-header-cel {
+        @apply px-10 py-2
+      }
+      .table-body {
+        @apply border border-gray-900
+      }
+      .table-body-cel {
+        @apply border border-gray-900 px-10 py-2
       }
     }
   </style>
